# is-msgs

./: .clang-format  .gitignore  .style.yapf  CMakeLists.txt  Jenkinsfile  LICENSE.txt  README.md  bootstrap.py  bootstrap.sh  build.sh  camera.proto  common.proto  conanfile.py  conanfile.txt  gen.sh  image.proto  install_cpp.sh  is-msgsConfig.cmake  package.json  package.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  other.yml
.github/workflows/: main.yml
cpp/: camera.pb.cc  camera.pb.h  common.pb.cc  common.pb.h  image.pb.cc  image.pb.h
docs/: README.md  generate_docs.bash  index.html
is/msgs/: camera.proto  common.proto  image.proto  marker.proto  robot.proto  tests.proto  wire.proto
is/utils/: cv.hpp  cv.t.cpp  io.cpp  io.hpp  io.t.cpp  status.cpp  status.hpp  timestamp.hpp  utils.hpp  validate.cpp  validate.hpp  validate.t.cpp
java/com/is/common/: Common.java
java/com/is/vision/: Camera.java  ImageOuterClass.java
js/: boundingbox.js  cameracalibration.js  cameraconfig.js  cameraconfigfields.js  camerasetting.js  camerasettings.js  colorspace.js  doublematrix.js  fieldselector.js  image.js  imageformat.js  imagesettings.js  resolution.js  samplingsettings.js  status.js  statuscode.js  vertex.js
msgs/: camera.proto  image.proto  power.proto  tests.proto  validate.proto
protos/: aruco.proto  camera.proto  common.proto  gendocs.sh  image.proto  marker.proto  power.proto  robot.proto
py/: camera_pb2.py  common_pb2.py  image_pb2.py
python/: README.md  setup.cfg  setup.py
python/is_msgs/utils/: build.py
python/tests/unit/: test_is_msgs.py
src/: CMakeLists.txt  is-msgsConfig.cmake  ostream-ext.cpp  ostream-ext.hpp  status-ext.cpp  status-ext.hpp  utils.cpp  utils.hpp
src/cpp/is/utils/: io.hpp  timestamp.t.cpp  validate.t.cpp
src/is/msgs/: tests.proto
src/is/utils/: cv.t.cpp  io.cpp  ostream.hpp  utils.hpp
src/proto/is/msgs/: camera.proto  image.proto
src/python/is_msgs/utils/: build.py
utils/: ostream.cpp  timestamp.cpp  timestamp.t.cpp  utils.hpp  validate.hpp  validate.t.cpp
